new js code inserted

--- a/konlak.html
+++ b/konlak.html
@@ -1,1 +1,24 @@
-<h1>konlak</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>test</title>
+</head>
+<body>
+    <script>
+
+var defaultPerson = {
+ name: {
+ first: "Shane",
+ last: "McConkey"
+ },
+ favActivity: "skiing"
+}
+function logActivity(p=defaultPerson) {
+ console.log(`${p.name.first} loves ${p.favActivity}`)
+}
+    </script>
+    
+</body>
+</html>
